--- a/package.json
+++ b/package.json
@@ -5,16 +5,26 @@
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.1",
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.4.4",
     "@mui/x-data-grid": "^5.5.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "d3": "^7.9.0",
+    "dnd-core": "^16.0.1",
     "firebase": "^9.6.10",
+    "konva": "^9.3.8",
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.0.4",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.6",
+    "react-konva": "^18.2.10",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "recharts": "^2.1.9",
