--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.6",
     "react-konva": "^18.2.10",
+    "react-linkify": "^1.0.0-alpha",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "recharts": "^2.1.9",
