--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "d3": "^7.9.0",
     "dnd-core": "^16.0.1",
     "firebase": "^9.6.10",
+    "firebase-admin": "^13.0.1",
     "konva": "^9.3.8",
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.0.4",
